# juliafmt

./: .juliafmt.toml  Cargo.toml  README.md  gen_id_re.jl  id_start_chars.txt  token_bench.jl
benches/: benchmark.rs
crates/format/: Cargo.toml
crates/juliafmt/: Cargo.toml
crates/juliafmt/src/: main.rs
crates/lexer/: Cargo.toml
crates/lexer/benches/: benchmark.rs
crates/lexer/src/: lib.rs  token_kind.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs
crates/parser/src/parser/: marker.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
src/: lib.rs  main.rs
src/formatter/: mod.rs
src/lexer/: mod.rs
src/parser/: event.rs  expr.rs  julia.pest  marker.rs  mod.rs  sink.rs  source.rs
src/syntax/: mod.rs
test/: test.jl
tests/: lexer.rs  parser.rs
