[package]
edition = "2021"
name = "juliafmt"
version = "0.1.0"

[dependencies]
clap = { version = "3.0", features = ["derive","color"]}
pest = "2.1"
pest_derive = "2.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
pretty = "0.11"
logos = "0.12"
walkdir = "2.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
